--- a/xh-admin/pom.xml
+++ b/xh-admin/pom.xml
@@ -51,6 +51,11 @@
             <groupId>io.springfox</groupId>
             <artifactId>springfox-swagger-ui</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.xh.core</groupId>
+            <artifactId>xh-core</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <build>
