--- a/xh-eureka/src/main/resources/application.yml
+++ b/xh-eureka/src/main/resources/application.yml
@@ -5,12 +5,24 @@ spring:
 #    admin:
 #      context-path:  /admin
 server:
-  port: 10501
+  port: 10001
 eureka:
-  instance:
-    hostname: localhost
   client:
     registerWithEureka: false #通过eureka.client.registerWithEureka：false和fetchRegistry：false来表明自己是一个eureka server.
     fetchRegistry: false
     serviceUrl:
       defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
+  instance:
+    hostname: localhost
+    leaseRenewalIntervalInSeconds: 10
+    health-check-url-path: /actuator/health
+    prefer-ip-address: true
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: '*'
+  endpoint:
+    health:
+      show-details: ALWAYS
