--- a/xh-sso/xh-sso-biz/pom.xml
+++ b/xh-sso/xh-sso-biz/pom.xml
@@ -12,6 +12,16 @@
   <artifactId>xh-sso-biz</artifactId>
 
   <dependencies>
+    <!-- spring-boot-admin -->
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-webflux</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>de.codecentric</groupId>
+      <artifactId>spring-boot-admin-starter-client</artifactId>
+    </dependency>
+    <!-- eureka-client -->
     <dependency>
       <groupId>org.springframework.cloud</groupId>
       <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
