--- a/xh-parent/pom.xml
+++ b/xh-parent/pom.xml
@@ -19,7 +19,7 @@
   <!--  配置变量  -->
   <properties>
     <java.version>1.8</java.version>
-    <mybatis.plus.version>3.3.1.tmp</mybatis.plus.version>
+    <mybatis-plus.version>3.3.1.tmp</mybatis-plus.version>
     <springboot.version>2.1.9.RELEASE</springboot.version>
     <mysql.version>8.0.17</mysql.version>
     <lombok.version>1.18.10</lombok.version>
@@ -27,27 +27,39 @@
     <fastjson.version>1.2.47</fastjson.version>
     <oauth2.version>2.1.5.RELEASE</oauth2.version>
     <spring-cloud.version>Greenwich.SR3</spring-cloud.version>
-    <cloud-plugin-version>2.1.3.RELEASE</cloud-plugin-version>
+    <spring-cloud-plugin.version>2.1.3.RELEASE</spring-cloud-plugin.version>
+    <spring-boot-admin.version>2.1.6</spring-boot-admin.version>
   </properties>
 
   <dependencyManagement>
     <dependencies>
+      <dependency>
+        <!-- spring-boot-admin -->
+        <groupId>de.codecentric</groupId>
+        <artifactId>spring-boot-admin-starter-server</artifactId>
+        <version>${spring-boot-admin.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>de.codecentric</groupId>
+        <artifactId>spring-boot-admin-starter-client</artifactId>
+        <version>${spring-boot-admin.version}</version>
+      </dependency>
       <!--  eureka  -->
       <dependency>
         <groupId>org.springframework.cloud</groupId>
         <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
-        <version>${cloud-plugin-version}</version>
+        <version>${spring-cloud-plugin.version}</version>
       </dependency>
       <dependency>
         <groupId>org.springframework.cloud</groupId>
         <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
-        <version>${cloud-plugin-version}</version>
+        <version>${spring-cloud-plugin.version}</version>
       </dependency>
       <!--  gateway  -->
       <dependency>
         <groupId>org.springframework.cloud</groupId>
         <artifactId>spring-cloud-starter-gateway</artifactId>
-        <version>${cloud-plugin-version}</version>
+        <version>${spring-cloud-plugin.version}</version>
       </dependency>
       <!--  oauth2  -->
       <dependency>
@@ -65,7 +77,7 @@
       <dependency>
         <groupId>com.baomidou</groupId>
         <artifactId>mybatis-plus-generator</artifactId>
-        <version>${mybatis.plus.version}</version>
+        <version>${mybatis-plus.version}</version>
       </dependency>
       <dependency>
         <groupId>org.apache.velocity</groupId>
@@ -75,7 +87,7 @@
       <dependency>
         <groupId>com.baomidou</groupId>
         <artifactId>mybatis-plus-boot-starter</artifactId>
-        <version>${mybatis.plus.version}</version>
+        <version>${mybatis-plus.version}</version>
       </dependency>
       <!--  web-starter  -->
       <dependency>
