--- a/xh-admin/xh-admin-biz/src/main/resources/application.yml
+++ b/xh-admin/xh-admin-biz/src/main/resources/application.yml
@@ -22,7 +22,7 @@ spring:
 #        service-name: ${spring.application.name}
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://45.76.218.204:3306/xh?characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=false&allowMultiQueries=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=Asia/Shanghai
+    url: jdbc:mysql://45.76.218.204:3306/gl?characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=false&allowMultiQueries=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=Asia/Shanghai
     username: root
     password: niunan789
     type: com.zaxxer.hikari.HikariDataSource
