更新项目结构和数据源切换

--- a/xh-parent/pom.xml
+++ b/xh-parent/pom.xml
@@ -10,29 +10,97 @@
   <packaging>pom</packaging>
   <!--  spring-boot  -->
   <parent>
-    <groupId>org.springframework.boot</groupId>
-    <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.1.9.RELEASE</version>
-    <relativePath/> <!-- lookup parent from repository -->
+    <groupId>com.pig4cloud</groupId>
+    <artifactId>pig-cloud-dependencies-parent</artifactId>
+    <version>Hoxton.SR3</version>
   </parent>
 
   <!--  配置变量  -->
   <properties>
     <java.version>1.8</java.version>
     <mybatis-plus.version>3.3.1.tmp</mybatis-plus.version>
-    <springboot.version>2.1.9.RELEASE</springboot.version>
+    <spring-boot.version>2.2.6.RELEASE</spring-boot.version>
+    <spring-cloud-alibaba.version>2.2.1.RELEASE</spring-cloud-alibaba.version>
+    <spring-cloud.version>Hoxton.SR3</spring-cloud.version>
+    <spring-cloud-plugin.version>2.1.3.RELEASE</spring-cloud-plugin.version>
+    <spring-boot-admin.version>2.2.2</spring-boot-admin.version>
     <mysql.version>8.0.17</mysql.version>
     <lombok.version>1.18.10</lombok.version>
     <swagger.version>2.9.2</swagger.version>
     <fastjson.version>1.2.47</fastjson.version>
     <oauth2.version>2.1.5.RELEASE</oauth2.version>
-    <spring-cloud.version>Greenwich.SR3</spring-cloud.version>
-    <spring-cloud-plugin.version>2.1.3.RELEASE</spring-cloud-plugin.version>
-    <spring-boot-admin.version>2.1.6</spring-boot-admin.version>
+    <hutool.version>5.2.5</hutool.version>
+    <jasypt.version>2.1.0</jasypt.version>
+    <dynamic-ds.version>3.0.0</dynamic-ds.version>
+    <kaptcha.version>0.0.9</kaptcha.version>
   </properties>
+
+  <dependencies>
+    <!--配置文件处理器-->
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-configuration-processor</artifactId>
+      <optional>true</optional>
+    </dependency>
+    <dependency>
+      <groupId>com.github.ulisesbocchio</groupId>
+      <artifactId>jasypt-spring-boot-starter</artifactId>
+      <version>${jasypt.version}</version>
+    </dependency>
+    <!--监控-->
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-actuator</artifactId>
+    </dependency>
+    <!--监控客户端-->
+    <dependency>
+      <groupId>de.codecentric</groupId>
+      <artifactId>spring-boot-admin-starter-client</artifactId>
+      <version>${spring-boot-admin.version}</version>
+    </dependency>
+    <!--断路器依赖-->
+    <dependency>
+      <groupId>org.springframework.cloud</groupId>
+      <artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
+    </dependency>
+    <!--Lombok-->
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <scope>provided</scope>
+    </dependency>
+    <!--测试依赖-->
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-test</artifactId>
+      <scope>test</scope>
+    </dependency>
+  </dependencies>
 
   <dependencyManagement>
     <dependencies>
+      <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-dependencies</artifactId>
+        <version>${spring-boot.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework.cloud</groupId>
+        <artifactId>spring-cloud-dependencies</artifactId>
+        <version>${spring-cloud.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+      <!--spring cloud alibaba-->
+      <dependency>
+        <groupId>com.alibaba.cloud</groupId>
+        <artifactId>spring-cloud-alibaba-dependencies</artifactId>
+        <version>${spring-cloud-alibaba.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
       <dependency>
         <!-- spring-boot-admin -->
         <groupId>de.codecentric</groupId>
@@ -71,7 +139,7 @@
       <dependency>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-data-redis</artifactId>
-        <version>${springboot.version}</version>
+        <version>${spring-boot.version}</version>
       </dependency>
       <!--  mybatis-plus  -->
       <dependency>
@@ -93,7 +161,7 @@
       <dependency>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-web</artifactId>
-        <version>${springboot.version}</version>
+        <version>${spring-boot.version}</version>
       </dependency>
       <!--  mysql-dirver  -->
       <dependency>
@@ -128,7 +196,7 @@
       <dependency>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-test</artifactId>
-        <version>${springboot.version}</version>
+        <version>${spring-boot.version}</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
