--- a/xh-admin/xh-admin-biz/pom.xml
+++ b/xh-admin/xh-admin-biz/pom.xml
@@ -17,10 +17,6 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-webflux</artifactId>
         </dependency>
-        <dependency>
-            <groupId>de.codecentric</groupId>
-            <artifactId>spring-boot-admin-starter-client</artifactId>
-        </dependency>
         <!--  eureka  -->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
@@ -50,6 +46,12 @@
             <groupId>com.xh.admin</groupId>
             <artifactId>xh-admin-api</artifactId>
             <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.xh.common.core</groupId>
+            <artifactId>xh-common-core</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 
